--- a/DeepLearning/D2L/序列模型初步.md
+++ b/DeepLearning/D2L/序列模型初步.md
@@ -248,7 +248,7 @@ plt.xlabel('Token (log scale)')
 plt.ylabel('Frequency')
 ```
 
-<img src="./序列模型.assets/image-20240813204510934.png" alt="image-20240813204510934" style="zoom:67%;" />
+<img src="./序列模型初步.assets/image-20240813204510934.png" alt="image-20240813204510934" style="zoom:67%;" />
 
 我们绘制了词频与索引在log下的图像
 
@@ -269,7 +269,7 @@ plt.ylabel('Frequency')
     -   多种方案都是一样好的切分，但是我们不希望子序列的切分只有同一种偏移方式，否则会造成的覆盖的子序列有限
     -   需要引入随机偏移量，兼具随机性、覆盖率
 
-![image-20240813210700650](./序列模型.assets/image-20240813210700650.png)
+![image-20240813210700650](./序列模型初步.assets/image-20240813210700650.png)
 
 #### 随机采样
 
@@ -399,7 +399,7 @@ $$
 p(x) = p(x_1)p(x_2|x_1)...p(x_T|x_1,x_2, ...,x_{T-1})
 $$
 
-![image-20240813013037396](./序列模型.assets/image-20240813013037396.png)
+![image-20240813013037396](./序列模型初步.assets/image-20240813013037396.png)
 
 - 在之前所有事件发生的前提下，下一件事发生
 
@@ -433,7 +433,7 @@ $$
 
 - 使用潜变量概括了历史信息
 
-![image-20240813014018643](./序列模型.assets/image-20240813014018643.png)
+![image-20240813014018643](./序列模型初步.assets/image-20240813014018643.png)
 
 ### 误差
 
@@ -485,7 +485,7 @@ $$
 
 ## RNN
 
-![image-20240814170724072](./序列模型.assets/image-20240814170724072.png)
+![image-20240814170724072](./序列模型初步.assets/image-20240814170724072.png)
 
 $$
 H_t = \phi(X_tW_{xh} + H_{t-1}W_{hh} +b_h)
@@ -555,7 +555,7 @@ out, h = rnn(x,h0)
 
 
 
-![image-20240814203746124](./序列模型.assets/image-20240814203746124.png)
+![image-20240814203746124](./序列模型初步.assets/image-20240814203746124.png)
 
 我们对得到输出`output`和隐状态`h`
 
@@ -741,7 +741,7 @@ def grad_clipping(net, theta):
 
 如果不进行梯度裁剪
 
-![image-20240814210651906](./序列模型.assets/image-20240814210651906.png)
+![image-20240814210651906](./序列模型初步.assets/image-20240814210651906.png)
 
 直接爆了
 
@@ -751,7 +751,7 @@ def grad_clipping(net, theta):
 
 #### 结果
 
-![image-20240814210540734](./序列模型.assets/image-20240814210540734.png)
+![image-20240814210540734](./序列模型初步.assets/image-20240814210540734.png)
 
 ```python
 print(predict('time traveller', 200))
@@ -761,3 +761,8 @@ time travellerit s against reason said tiens aine tile atout in time and any of 
 ```
 
 还行（至少能输出正常的单词
+
+
+
+
+
