--- a/DeepLearning/D2L/现代序列模型.md
+++ b/DeepLearning/D2L/现代序列模型.md
@@ -121,3 +121,143 @@ class RNNModel(nn.Module):
 
 - 相比RNN，困惑度整体会变更低
 
+
+
+## 长短期记忆网络LSTM
+
+>   设计上比GRU更加复杂，但是早了20年
+
+### 门
+
+![image-20240815200752066](./现代序列模型.assets/image-20240815200752066.png)
+
+-   输入门：
+
+$$
+I_t = \sigma(X_tW_{xi} + H_{t_1}W_{hi} + b_i)
+$$
+
+-   遗忘门：
+$$
+F_t = \sigma(X_tW_{xf} + H_{t_1}W_{hf} + b_f)
+$$
+
+- 输出门：
+
+$$
+O_t = \sigma(X_tW_{xo} + H_{t_1}W_{ho} + b_o)
+$$
+
+>   通过sigmoid激活函数，三个门的值都在(0,1)内
+
+### 候选记忆元
+
+使用$\tanh$做激活函数，取值`[-1,1]`
+
+![image-20240815201321767](./现代序列模型.assets/image-20240815201321767.png)
+$$
+\tilde{C_t} = \tanh(X_tW_{xc}+H_{t-1}W_{hc}+b_c)
+$$
+
+### 记忆元
+
+记忆元主要来自两个部分：
+
+-   过去的记忆：即$C_{t-1}$，由遗忘门$F_t$控制保留多少过去的记忆
+-   新的记忆：即当前输入带来的候选记忆元$\tilde{C_t}$，由输入门控制引入多少
+
+则：
+$$
+C_t = F_t\odot C_{t-1}+I_t\odot \tilde{C_t}
+$$
+![image-20240815202050099](./现代序列模型.assets/image-20240815202050099.png)
+
+>   这种机制有助于模型记录下非常久远以前的记忆
+>
+>   某种程度上缓解了梯度消失，捕获长距离依赖关系
+
+
+
+### 隐状态
+
+$$
+H_t = O_t\odot\tanh(C_t)
+$$
+
+-   确保隐状态仍然在$[-1,1]$
+-   输出门接近1：完整保留记忆作为隐状态
+-   输出门接近0：隐状态被重置，只保留了记忆信息
+
+![image-20240815202726087](./现代序列模型.assets/image-20240815202726087.png)
+
+
+
+## 深度RNN
+
+前一篇讲过了（
+
+其实就是隐状态由单个全连接层，变成多个隐藏层
+
+![image-20240815203100752](./现代序列模型.assets/image-20240815203100752.png)
+
+## 双向RNN
+
+普通的RNN只能考虑到上文，无法考虑到下文：
+
+```python
+'''
+我___。
+
+我___饿了。
+
+我___饿了，我可以吃半头猪。
+'''
+```
+
+![image-20240815205000491](./现代序列模型.assets/image-20240815205000491.png)
+
+将隐状态分为正向隐状态、反向隐状态
+
+对于正向隐状态：
+
+![image-20240815205044213](./现代序列模型.assets/image-20240815205044213.png)
+$$
+\overrightarrow{H_t}=  \phi( X_tW_{xh}^{\text{front}} + \overrightarrow{H}_{t-1}W_{hh}^{\text{front}}+b_h^{\text{front}})
+$$
+
+-   由输入、上一个前向隐状态得到
+
+对于反向隐状态：
+
+![image-20240815205315871](./现代序列模型.assets/image-20240815205315871.png)
+$$
+\overleftarrow{H_t}=  \phi( X_tW_{xh}^{\text{back}} + \overleftarrow{H}_{t+1}W_{hh}^{\text{back}}+b_h^{\text{back}})
+$$
+
+-   由输入、后一个反向隐状态得到
+
+
+
+对于输出，我们把$\overrightarrow{H_t},\overleftarrow{H_t}$合并成$H_t$（矩阵连起来）
+$$
+O_t = H_TW_{hq} + b_q
+$$
+![image-20240815205543222](./现代序列模型.assets/image-20240815205543222.png)
+
+
+
+#### 代价
+
+-   计算速度非常慢，计算链条很长
+-   需要存储的内存非常大
+
+-   用处有限
+    -   填充缺失单词、词元、注释
+    -   机器翻译
+
+
+
+## 机器翻译 
+
+
+
