--- a/DeepLearning/D2L/现代序列模型.md
+++ b/DeepLearning/D2L/现代序列模型.md
@@ -494,7 +494,7 @@ def build_array(tokens, vocab, num_steps):
     array = torch.tensor([
         truncate_pad(token, vocab['<pad>'], num_steps)
         for token in tokens
-    ], dtype=torch.float32)
+    ], dtype=torch.long)# 后续需要进入embedding 只接受整数
     
     # 统计非pad的词元数量
     valid_len = (array != vocab['<pad>'] ).type(torch.int32).sum(1)
@@ -525,7 +525,7 @@ class fraDataset(Dataset):
         return X, X_valid_len, Y, Y_valid_len
     
 def load_data(batch_size, num_steps, num_examples=600):
-    source, target = read_data_fra()
+    source, target = read_data_fra(num_examples)
     
     # 构造词表
     src_vocab = Vocab(source, min_freq=2, reserved_tokens=['<pad>', '<bos>', '<eos>'])
@@ -546,7 +546,7 @@ torch.Size([167130]) torch.Size([167130])
     # 构造数据迭代器
     data_arrays = (src_array, src_valid_len, tgt_array, tgt_valid_len)
     dataset = fraDataset(*data_arrays)
-    return DataLoader(dataset, batch_size, shuffle=True), src_vocab, tgt_vocab
+    return DataLoader(dataset, batch_size, shuffle=True, num_workers=2), src_vocab, tgt_vocab
 
 train_iter, src_vocab, tgt_vocab = load_data(batch_size=2, num_steps=8)
 
@@ -567,4 +567,387 @@ Y的有效长度: tensor([8, 8])
 '''
 
 ```
+
+
+
+### 编码器  + 解码器
+
+-   编码器可以使用双向RNN
+-   解码器需要进行预测，无法看到未来，只能单向
+
+-   encoder没有输出，**encoder最后一个时间步的隐状态，将作为decoder的初始隐状态**
+
+#### Encoder
+
+```python
+class Seq2SeqEncoder(nn.Module):
+    def __init__(self, vocab_size, embed_size, num_hiddens, num_layers, dropout=0, **kwargs):
+        super(Seq2SeqEncoder, self).__init__(**kwargs)
+        # 嵌入层
+        self.embedding = nn.Embedding(vocab_size, embed_size)
+        self.rnn = nn.GRU(embed_size, num_hiddens, num_layers, dropout=dropout)
+
+    def forward(self, X, *args):
+      
+        # X形状：(batch_size,num_steps)
+        X = self.embedding(X)
+  
+        # X形状：(batch_size,num_steps,embed_size)
+        # 变换(num_steps,batch_size,embed_size)
+        X = X.permute(1, 0, 2)
+
+        # 获取隐状态
+        output, state = self.rnn(X)
+        # output = (num_steps, batch_size, num_hiddens)
+        # state = (num_layers, batch_size, num_hiddens)
+        return output, state
+```
+
+验证：
+
+```python
+encoder = Seq2SeqEncoder(vocab_size=10, embed_size=8, num_hiddens=16, num_layers=2)
+encoder.eval()
+X = torch.zeros((4,7), dtype=torch.long) # embed接受int和long
+output,state = encoder(X)
+print(output.shape, state.shape
+# torch.Size([7, 4, 16]) torch.Size([2, 4, 16])
+
+
+```
+
+
+
+#### decoder
+
+-   我们需要取出最后一层的state
+
+![image-20240820014458014](./现代序列模型.assets/image-20240820014458014.png)
+
+
+
+-   和X进行拼接
+
+
+
+![image-20240820014726439](./现代序列模型.assets/image-20240820014726439.png)
+
+```python
+class Seq2SeqDecoder(nn.Module):
+    def __init__(self, vocab_size, embed_size, num_hiddens, num_layers, dropout=0, **kwargs):
+        super(Seq2SeqDecoder, self).__init__(**kwargs)
+
+        self.embedding = nn.Embedding(vocab_size, embed_size)
+        # 需要同时接受 X 和 state 进行拼接 见forward
+        self.rnn = nn.GRU(embed_size + num_hiddens, num_hiddens, num_layers, dropout=dropout)
+
+        # 输出层 全连接
+        self.dense = nn.Linear(num_hiddens, vocab_size)
+
+    def forward(self, X, state):
+
+        X = self.embedding(X).permute(1, 0, 2)
+        
+        # state = (num_layers, batch_size, num_hiddens)
+        # 取state中 由最后一层的所有节点产生的输出
+        # 第一维重复num_steps次 第二、三维重复1次
+        # context = (num_steps, batch_size, num_hiddens)
+        context = state[-1].repeat(X.shape[0], 1, 1)
+
+        # 组合X和context 在最后一个维度进行连接
+        # -> (batch_size,num_steps,embed_size + num_hiddens)
+        X_and_context = torch.cat((X, context), 2)
+
+        output, state = self.rnn(X_and_context, state)
+        
+        # 预测输出 调整为batch_size在前的模式
+        output = self.dense(output).permute(1, 0, 2)
+        
+        return output, state
+```
+
+
+
+测试：
+
+```python
+decoder = Seq2SeqDecoder(vocab_size=10, embed_size=8, num_hiddens=16, num_layers=2)
+decoder.eval()
+output, state = decoder(X, state) # 喂入encoder的state
+output.shape, state.shape
+# (batch_size, num_steps, vocab_size)
+# (torch.Size([4, 7, 10]), torch.Size([2, 4, 16]))
+```
+
+
+
+#### 封装
+
+```python
+class EncoderDecoder(nn.Module):
+    def __init__(self, encoder, decoder, **kwargs):
+        super(EncoderDecoder, self).__init__(**kwargs)
+        self.encoder = encoder
+        self.decoder = decoder
+
+    def forward(self, enc_X, dec_X):
+        output,state = self.encoder(enc_X)
+        return self.decoder(dec_X, state)
+                            
+
+encoder = Seq2SeqEncoder(vocab_size=10, embed_size=8, num_hiddens=16, num_layers=2)
+decoder = Seq2SeqDecoder(vocab_size=10, embed_size=8, num_hiddens=16, num_layers=2)
+seq2seq = EncoderDecoder(encoder,decoder)         
+X = torch.zeros((4,7), dtype=torch.long)
+output, state = seq2seq(X,X)
+output.shape, state.shape 
+# (torch.Size([4, 7, 10]), torch.Size([2, 4, 16]))
+```
+
+
+
+### Vaild Length
+
+在前文中我们处理得到了一个`vaild_len`
+
+```python
+'''
+X: tensor([[  66,   12,   77, 2545,    4,    3,    1,    1],
+        [ 454,   74,   57,  491,   23,  109,    7,  1]], dtype=torch.int32)
+X的有效长度: tensor([6, 7])
+'''
+```
+
+我们希望可以将不相干的、超出有效长度的进行屏蔽
+
+```python
+[  66,   12,   77, 2545,    4,    3,    1,    1],
+[ 454,   74,   57,  491,   23,  109,    7,  1]
+
+->
+
+[  66,   12,   77, 2545,    4,    3,    0,    0],
+[ 454,   74,   57,  491,   23,  109,    7,  0]
+```
+
+```python
+def sequence_mask(X, valid_len, value=0):
+
+    maxlen = X.size(1) # 取出定长序列的长度 size(0)是batch_size
+
+    # 生成一个从 0 到 maxlen-1 的一维张量 [0,1,2,3...,maxlen-1]
+
+    # torch.arrange()[None, :] -> 将[0,1,2,3...,maxlen-1]变成[[0,1,2,3...,maxlen-1]]
+    # 即：(maxlen)-> (1,maxlen) 准备后续的广播机制
+
+    # valid_len[:, None] -> 将(batch_size)变成(batch_size,1)
+
+    # 比较[0, 1, 2, 3, 4] 和 [3,4]
+    # 通过广播机制：
+    '''
+    [[0, 1, 2, 3, 4]
+    [0, 1, 2, 3, 4]]
+
+    与
+    [[3,3,3,3,3]
+    [4,4,4,4,4]] 进行比较
+
+    故得到：
+    [True,  True,  True,  False,  False],
+    [True,  True,  True,  True,  False]]
+    '''
+    mask = torch.arange(maxlen, dtype=torch.float32, device=X.device)[None, :] < valid_len[:, None]
+
+    X[~mask] = value # False对应位置进行修改
+    return X
+
+X = torch.tensor([[1, 2, 3], [4, 5, 6]])
+sequence_mask(X, torch.tensor([1, 2]))
+# tensor([[1, 0, 0], [4, 5, 0]])
+```
+
+
+
+### 损失函数
+
+超出有效长度的部分，不能计算交叉熵，需要置为0
+
+```python
+class MaskedSoftmaxCELoss(nn.CrossEntropyLoss):
+    def forward(self, pred, label, valid_len):
+        # label: (batch_size, seq_len)
+        # pred: (batch_size, seq_len, num_classes)
+        weights = torch.ones_like(label) # 默认保留所有值
+        weights = sequence_mask(weights, valid_len) # 超出合法长度的权值为0
+        self.reduction = 'none' # 确保得到与输入相同形状的损失张量
+
+        # pred转换为 (batch_size, num_classes, seq_len) 符合pytorch接口
+        # unweighted_loss为(batch_size, seq_len)
+        unweighted_loss = super().forward(pred.permute(0, 2, 1), label)
+
+        # 乘以权值 算均值
+        weighted_loss = (unweighted_loss * weights).mean(dim=1)
+        return weighted_loss
+
+loss = MaskedSoftmaxCELoss()
+loss(torch.ones(3, 4, 10), torch.ones((3, 4), dtype=torch.long),
+     torch.tensor([4, 2, 0]))
+# tensor([2.3026, 1.1513, 0.0000])
+```
+
+
+
+### 训练
+
+-   训练时需要给decoder喂入真正的数据，即都是同一套X作为输入
+-   但是需要处理一下`bos`和`eos`
+
+![image-20240820170241942](./现代序列模型.assets/image-20240820170241942.png)
+
+```python
+def train_seq2seq(net, data_iter, lr, num_epochs, tgt_vocab, device):
+    """训练序列到序列模型。"""
+
+    net.to(device)
+    optimizer = torch.optim.Adam(net.parameters(), lr=lr)
+    loss = MaskedSoftmaxCELoss()
+    
+    net.train()
+    st = time.time()
+    epoch_losses = []  # 用于存储每轮的损失
+    
+    for epoch in range(num_epochs):
+
+        sum_loss, sum_tokens = 0.0, 0.0
+        
+        for X, X_valid_len, Y, Y_valid_len in data_iter:
+            X, X_valid_len, Y, Y_valid_len = X.to(device), X_valid_len.to(device), Y.to(device), Y_valid_len.to(device)
+
+            # 取出-> [ tgt_vocab['<bos>'] ]
+            # 在列表中重复batch_size次 -> [ bos, bos, bos, ... ]
+            # reshape -> [ [bos], [bos], [bos], ... ] # 每个bos占一个维度
+            bos = torch.tensor([tgt_vocab['<bos>']] * Y.shape[0], device=device).reshape(-1, 1)
+            
+            # decoder_X的输入要去掉最后一个eos 每个输入前加一个bos
+            dec_input = torch.cat([bos, Y[:, :-1]], 1)
+            
+            Y_hat, _ = net(X, dec_input)
+            l = loss(Y_hat, Y, Y_valid_len)
+            l.sum().backward()
+            grad_clipping(net, 1) # 梯度裁剪
+            
+            num_tokens = Y_valid_len.sum()
+            optimizer.step()
+            with torch.no_grad():
+                sum_loss += l.sum()
+                sum_tokens += num_tokens
+
+        avg_loss = (sum_loss / sum_tokens).item()
+        epoch_losses.append(avg_loss)  # 记录每轮的平均损失
+
+        if (epoch + 1) % 10 == 0:
+            print(f'epoch{epoch + 1}/{num_epochs}, loss = {avg_loss}')
+        
+        plt.plot(range(1, num_epochs + 1), epoch_losses, label='Train Loss')
+        plt.xlabel('Epoch')
+        plt.ylabel('Loss')
+        plt.title('Training Loss over Time')
+        plt.legend()
+        plt.show()
+            
+    print(f'loss {sum_loss.item() / sum_tokens.item():.3f}, {sum_tokens.item() / (time.time()-st):.1f} '
+          f'tokens/sec on {str(device)}')
+```
+
+-   准备工作
+
+```python
+embed_size, num_hiddens, num_layers, dropout = 32, 32, 2, 0.1
+batch_size, num_steps = 64, 10
+lr, num_epochs, device = 0.005, 300, torch.device('cuda' if torch.cuda.is_available() else 'cpu')
+
+train_iter, src_vocab, tgt_vocab = load_data(batch_size, num_steps)
+encoder = Seq2SeqEncoder(len(src_vocab), embed_size, num_hiddens, num_layers, dropout)
+decoder = Seq2SeqDecoder(len(tgt_vocab), embed_size, num_hiddens, num_layers, dropout)
+net = EncoderDecoder(encoder, decoder)
+
+train_seq2seq(net, train_iter, lr, num_epochs, tgt_vocab, device)
+```
+
+-   结果
+
+![image-20240820175148162](./现代序列模型.assets/image-20240820175148162.png)
+
+### 预测
+
+我们需要一个个喂入decoder，以decoder的输出作为下一次输入
+
+```python
+def predict_seq2seq(net, src_sentence, src_vocab, tgt_vocab, num_steps, device):
+    
+    net.eval()
+    
+   # 对测试数据需要进行相同的预处理
+
+   # 对源句子进行分词，并将其转换为对应的词汇表索引
+   # 在句子末尾添加结束标记 `<eos>`
+    src_tokens = src_vocab[src_sentence.lower().split(' ')] + [src_vocab['<eos>']]
+    
+    # 有效长度
+    enc_valid_len = torch.tensor([len(src_tokens)], device=device)
+   
+    src_tokens = truncate_pad(src_tokens, num_steps, src_vocab['<pad>'])
+    
+    # 添加一个批次维度
+    enc_X = torch.unsqueeze(
+        torch.tensor(src_tokens, dtype=torch.long, device=device), dim=0)
+    
+    # encoder
+    _,dec_state = net.encoder(enc_X)
+
+    # decoder初始输入 设置为 `<bos>` 标记
+    dec_X = torch.unsqueeze(
+        torch.tensor([tgt_vocab['<bos>']], dtype=torch.long, device=device), dim=0
+    )
+    
+    # 输出序列
+    output_seq = []
+    
+    # 执行num_steps次
+    for _ in range(num_steps):
+        Y, dec_state = net.decoder(dec_X, dec_state)
+  		# 最大值的索引作为预测结果
+        dec_X = Y.argmax(dim=2)
+        pred = dec_X.squeeze(dim=0).type(torch.int32).item()
+        
+        # 如果预测到结束标记 `<eos>`，停止解码
+        if pred == tgt_vocab['<eos>']: break
+        
+        # 将当前预测的词汇索引加入输出序列
+        output_seq.append(pred)
+    
+    # 返回真实文本
+    return ' '.join(tgt_vocab.to_tokens(output_seq))
+```
+
+
+
+测试：
+
+```python
+engs = ['go .', "i lost .", 'he\'s calm .', 'i\'m home .']
+fras = ['va !', 'j\'ai perdu .', 'il est calme .', 'je suis chez moi .']
+for eng, fra in zip(engs, fras):
+    translation = predict_seq2seq(net, eng, src_vocab, tgt_vocab, num_steps, device)
+    print(f'{eng} => {translation}')
+    
+'''
+go . => vas- !
+i lost . => suis- je
+he's calm . => !
+i'm home . => !
+'''
+```
+
+不太行
 
