--- a/DeepLearning/李宏毅/Spring2022/L6.md
+++ b/DeepLearning/李宏毅/Spring2022/L6.md
@@ -155,5 +155,29 @@ GAN的训练比较困难
 那么要如何使得Discriminator平滑
 
 - WGAN的近似方法：对参数裁剪，绝对值超过c就赋值为c，压缩函数空间
-- Imporved WGAN的方法：Gradient Penalty，没听懂
-- SNGAN最终方法：Spectral Normalization，让梯度的标准差在任意处小于1
+- Improved WGAN的方法：Gradient Penalty，没听懂
+- SNGAN最终方法：Spectral Normalization，让梯度的标准差在任意处小于1 
+
+ 
+
+### GAN for Sequence
+
+**我们发现很难训练出一个产生sequence的GAN**
+
+我们使用某种架构产生一个关于多个token的distribution
+
+Discriminator则会根据概率最大的token作为输入进行判别打分
+
+但是当我们进行训练时，对Generator进行一点调整，很有可能原本的token仍然是概率最大的
+
+因此不会改变Discriminator的打分输出，微分为0，很难进行梯度下降
+
+
+
+### Evaluation
+
+
+
+
+
+ 
