--- a/DeepLearning/李宏毅/Spring2022/L6.md
+++ b/DeepLearning/李宏毅/Spring2022/L6.md
@@ -176,8 +176,176 @@ Discriminator则会根据概率最大的token作为输入进行判别打分
 
 ### Evaluation
 
+#### 分类器评估 - Quality
+
+我们希望评估GAN生成的图片质量
+
+我们可以使用VGG、Inception等已有的图像分类网络
+
+对GAN生成的图片进行评估，Distribution如果非常集中，说明分类器非常笃定这是某一类，代表生成的图片非常好
+
+反之无法确定是什么，说明生成的图片质量差
+
+ ![image-20240903011607018](./L6.assets/image-20240903011607018.png)
+
+---
+
+但是坏处是我们无法避免`Mode Collapse`
+
+> Mode collapse **occurs when the generator fails to represent the full range of possible outputs and produces a limited set of outputs that do not resemble the training data**
+>
+> 模式奔溃：GAN 训练的后期阶段，生成器生成图像样式单一
+
+![image-20240903010501480](./L6.assets/image-20240903010501480.png)
+
+可能GAN只会输出狗的图片，我们只对狗进行了测试，但是训练集中还有其他动物
+
+我们只靠这些生成出来的图片，无法判断GAN的综合表现
+
+> 本质上是输出的Distribution方差太小
+
+
+#### Diversity
+
+我们希望在Quality高的情况下，图片多样性Diversity也是尽可能高
+
+我们会对一张图片的概率分布评估Quality
+
+而要想评估Diversity，我们需要衡量所有生成的图片
+
+![image-20240903011649475](./L6.assets/image-20240903011649475.png)
+
+把所有的概率分布相加求平均
+
+那么最后的概率分布如果平坦，说明各种类别都会均匀产生
+
+则代表Diversity高（注意！是所有图片一起衡量）
 
 
 
+#### Frechet Inception Distance
 
- 
+我们简单的拿分类结果看不一定合适
+
+同样是人脸类别，但是也需要有各种各样的面貌
+
+我们喂入Inception网络
+
+![image-20240903012030485](./L6.assets/image-20240903012030485.png)
+
+- FID越小越好
+- 需要大量的sample去近似分布
+
+> 当然实际输出的分布并不一定是正态分布
+>
+> 因此还需要结合多种指标
+
+也可以采用多轮不同的random seed去sample
+
+也能得到一个关于FID的分布
+
+![image-20240903012302339](./L6.assets/image-20240903012302339.png)
+
+总体偏低的自然比较好
+
+
+
+但是还有`Mode Dropping`的问题
+
+![image-20240903010931997](./L6.assets/image-20240903010931997.png)
+
+虽然可能能够对训练集做不错的分布近似
+
+但是来来回回只认识训练集，对于训练集之外的不认识
+
+![image-20240903011014645](./L6.assets/image-20240903011014645.png)
+
+> 多次迭代并没有发生本质性的变化
+
+![image-20240903012452977](./L6.assets/image-20240903012452977.png)
+
+记住训练集内容（或者输出一个左右翻转的图片），似乎就无敌了
+
+但是这并不是一个好的GAN
+
+> 课程没有给出好的解决方法
+
+
+
+## Conditional GAN
+
+比如说`text-to-img`
+
+我们希望在生成的图片的时候加入一些图片描述
+
+![image-20240903012830810](./L6.assets/image-20240903012830810.png)
+
+我们需要调整Discriminator的输入
+
+将condition加入到Discriminator的判别打分之中
+
+![image-20240903013044665](./L6.assets/image-20240903013044665.png)
+
+- 打包好`condition,real-img`作为正例
+- `condition,generated-img`作为负例
+
+但是这样不够充分，还需要添加：
+
+- `condition, wrong-real-img`作为负例
+
+故意乱配图片，加强对`condition`的限制能力
+
+---
+
+我们也可以考虑结合`supervised-learning`
+
+> 单用监督学习会造成前文所说的既要又要
+
+让生成的结果有几份标准答案兜底
+
+防止GAN生成出来的东西太肆意妄为
+
+![image-20240903015156274](./L6.assets/image-20240903015156274.png)
+
+
+
+## Unsupervised Learning
+
+我们可以使用GAN做一些无监督学习的事情
+
+即从`unpaired data`中进行学习
+
+
+
+![image-20240903015758868](./L6.assets/image-20240903015758868.png)
+
+例如样式迁移，对于x中的原图，并没有与y中某一张图片形成pair
+
+
+
+![image-20240903015925261](./L6.assets/image-20240903015925261.png)
+
+我们只需要喂入x到Generator中生成一张图片
+
+让Discriminator判断是否是y的风格即可
+
+
+
+但是我们无法避免生成的图片和原图片无关的问题
+
+兴许Generator只学会了生成y中的图片，而和x没太大关系
+
+> 对于pairded-data，我们可以用打乱的配对关系进行样式迁移前后的对比，从而强化输入关系
+
+
+
+### Cycle GAN
+
+ ![image-20240903020512417](./L6.assets/image-20240903020512417.png)
+
+引入第二个Generator，把第一个生成出的图片进行反向样式迁移
+
+我们希望两张图片尽量一致
+
+
+
