--- a/DeepLearning/D2L/code/attention.ipynb
+++ b/DeepLearning/D2L/code/attention.ipynb
@@ -332,9 +332,8 @@
     "\n",
     "    def forward(self, queries, keys, values, valid_lens):\n",
     "        queries, keys = self.W_q(queries), self.W_k(keys)\n",
-    "        # 在维度扩展后，\n",
-    "        # queries的形状：(batch_size，查询的个数，1，num_hidden)\n",
-    "        # key的形状：(batch_size，1，“键－值”对的个数，num_hiddens)\n",
+    "        # queries(batch_size，查询的个数，1，num_hidden)\n",
+    "        # key(batch_size，1，“键－值”对的个数，num_hiddens)\n",
     "        # 使用广播方式进行求和\n",
     "        features = queries.unsqueeze(2) + keys.unsqueeze(1)\n",
     "        features = torch.tanh(features)\n",
