--- a/DeepLearning/李宏毅/Spring2022/L9.md
+++ b/DeepLearning/李宏毅/Spring2022/L9.md
@@ -263,3 +263,39 @@ $$
 （某篇识别动物的论文结果，形状非常好
 
 ![image-20240904173130485](./L9.assets/image-20240904173130485.png)
+
+ #### Constraint from Generator
+
+我们考虑引入Generator来获得质量更高的结果
+
+我们可以训练一个向量到图片的Generator
+
+让其生成图片后，喂入分类器
+
+![image-20240909213504381](./L9.assets/image-20240909213504381.png)
+
+我们希望优化一个$z^*$，最大化$y_i$（分类的置信度）
+$$
+z^* = \arg \max_{z} y_i
+$$
+此时我们求出$G(z^*)$，展示图片即可
+
+效果会好非常多
+
+![image-20240909213845184](./L9.assets/image-20240909213845184.png)
+
+
+
+## Interpretable Model
+
+当我们无法解读一个非常复杂的网络时
+
+可以考虑使用较为简单的模型对黑盒进行模仿
+
+从简单模型的角度进行解释
+
+![image-20240909214146883](./L9.assets/image-20240909214146883.png)
+
+但肯定没法完全模仿
+
+因此可以考虑在局部进行模仿解读
