--- a/DeepLearning/李宏毅/Spring2022/L10.md
+++ b/DeepLearning/李宏毅/Spring2022/L10.md
@@ -145,3 +145,104 @@ $$
 
 如果训练数据足够，就有机会避免被攻击
 
+
+
+## Case
+
+-   One pixel attack：改变一个像素点完成攻击
+-   Universal Adversarial Attack：同一套攻击方式攻击所有对象，不需要客制化
+
+<br />
+
+在实际环境中，观察一个物体会从多个角度进行观察
+
+因此只对一个角度进行欺骗的意义不大
+
+需要Universal Adversarial Attack对任意角度都进行欺骗
+
+<br />
+
+除了图像分类，还有其他形式的攻击
+
+-   对合成声音添加噪声，欺骗模型是真实的声音而不是合成声音
+-   对文本添加一些内容，控制模型的QA结果
+
+<br />
+
+### Adversarial Reprogramming
+
+也可以利用攻击，对模型进行重编程
+
+![image-20240910122015511](./L10.assets/image-20240910122015511.png)
+
+通过这种方式不需要重新训练一个模型
+
+<br />
+
+### Backdoor
+
+之前的方式都是测试过程中的攻击
+
+我们考虑在训练中进行攻击
+
+>   有可能在训练资料里面加一些特别的、人看起来没有问题、但实际上有问题的资料
+>
+>   让模型训练完以后,模型就开了一个后门
+>
+>   只会对某一张图片辨识错误
+>
+>   对其他的图片还是没有问题的
+>
+>   **小心在网络上公开的资料集。**
+
+目前不是很成功，需要很多限制才能做到
+
+<br />
+
+
+
+## Defence
+
+### 被动防御
+
+我们在输入数据进入模型前过一个filter
+
+例如模糊化
+
+![image-20240910122519256](./L10.assets/image-20240910122519256.png)
+
+-   但是过度模糊化会导致正常的置信度也会下降
+
+>   其他方式：
+>
+>   -   对图片进行压缩后再解压缩
+>   -   generator对图片重新生成
+
+被动的防御是不能被别人知道的
+
+否则完全可以看成多了几层的新模型
+
+可以引入一些随机防御
+
+![image-20240910122925869](./L10.assets/image-20240910122925869.png)
+
+-   前提是不要泄露`distribution`
+
+### 主动防御
+
+采用`Adversarial Training`
+
+对于当前数据，先训练一个模型
+
+我们迭代多次下述过程：
+
+-   使用若干种攻击算法进行攻击
+-   对攻击成功的数据进行正确标注，添加到数据集中重新训练
+
+本质上是一种数据增强
+
+实际操作中不一定可以用来防止攻击，单纯用来增加模型鲁棒性、避免过拟合也不错
+
+-   运算量大
+-   不一定能防住模型没见过的攻击算法
+
